--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,99 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   color: white;
+  font-family: 'Readex Pro', sans-serif;
 }
 
-.App-link {
-  color: #61dafb;
+body {
+  background-image: url('./assets/galaxy/galaxy.svg');
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+header{
+  text-align: center;
+  margin-top: 30px;
+}
+
+h1 {
+  font-size: 50px;
+}
+
+h2 {
+  text-align: center;
+  font-size: 30px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  width: 100%;
+  background: rgba(161, 96, 152, 0.18);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(4.9px);
+  -webkit-backdrop-filter: blur(4.9px);
+  border: 1px solid rgba(161, 96, 152, 0.3);
+}
+
+.planets {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  margin-top: 20px;
+  flex-wrap: wrap;
+}
+
+.planet-name {
+  font-weight: bolder;
+}
+
+.img-planet {
+  width: 10em;
+  transition: 1.5s;
+}
+
+.img-planet:hover {
+  transform: scaleY(1.2) scaleX(1.2);
+}
+
+.missions {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.mission-card {
+  border: 1px solid black;  
+  width: 10em;
+  margin: 10px;
+  padding: 10px;
+  background: rgba(161, 96, 152, 0.18);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(4.9px);
+  -webkit-backdrop-filter: blur(4.9px);
+  border: 1px solid rgba(161, 96, 152, 0.3);
+}
+
+.mission-card:hover{
+  -webkit-box-shadow: -19px 15px 33px -4px rgba(0,0,0,0.75);
+  -moz-box-shadow: -19px 15px 33px -4px rgba(0,0,0,0.75);
+  box-shadow: -19px 15px 33px -4px rgba(0,0,0,0.75);
+}
+
+.mission-name {
+  margin-bottom: 10px;
+  font-weight: bolder;
+  border-bottom: 1px solid black;
+}
+
+body::-webkit-scrollbar {
+  width: 0.5rem;
+  background-color: white;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #b963ff;
+  border-radius: 30px;
 }
